--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: docs.defun.us, port: 443, type: trojan, password: WEMagdSekdGBxh6g, sni: docs.defun.us, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.08MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
-  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.13MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇨🇳 中国-3.68MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45785, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.62MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-344.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-159.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-7.92MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45786, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45787, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇦🇺 澳大利亚-921.8KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-853.7KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45785, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇬🇧 英国-1.18MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-921.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-853.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-921.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-853.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-921.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-853.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-921.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-853.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-921.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-853.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-921.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-853.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-921.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-853.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
