--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-344.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-159.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45785, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.18MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.40MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-682.6KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.20MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-649.6KB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-429.5KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1150, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇨🇳 中国-7.88MB/s(Youtube:不良林), server: lv2.sdwan.myasns.com, port: 7303, type: vmess, uuid: f12c8555-ba7f-493f-8b44-32ed67d51f1a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.48MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45786, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇨🇳 中国-7.87MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 45782, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇨🇳 中国-623.6KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇨🇳 中国-5.24MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 45780, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45787, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇮🇳 印度-2.28MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-649.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-649.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-649.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-649.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-649.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-649.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-344.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-159.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.18MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-649.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
