--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-429.5KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1150, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇨🇳 中国-7.88MB/s(Youtube:不良林), server: lv2.sdwan.myasns.com, port: 7303, type: vmess, uuid: f12c8555-ba7f-493f-8b44-32ed67d51f1a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.48MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45786, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇨🇳 中国-7.87MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 45782, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇨🇳 中国-623.6KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-5.24MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 45780, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-816.2KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45785, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
   - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45787, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇮🇳 印度-2.28MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 30122, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 乌克兰-506.8KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇺🇸 美国-4.10MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.54MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-341.4KB/s(Youtube:不良林), server: 167.172.56.225, port: 54141, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-816.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 乌克兰-506.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-341.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-816.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 乌克兰-506.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-341.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-816.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 乌克兰-506.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-341.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-816.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 乌克兰-506.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-341.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-816.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 乌克兰-506.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-341.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-816.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 乌克兰-506.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-341.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-623.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-816.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
+      - 乌克兰-506.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-341.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
